--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,6 @@ a {
 .main-user-nav {
   padding: 0;
   flex-basis: 50%;
-  box-sizing: border-box;
 }
 
 .main-user-nav {
@@ -245,7 +244,7 @@ a {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 
-  background-color: inherit;
+  background-color: rgb(248, 226, 151);
   background-image: url(../img/search.svg);
   background-repeat: no-repeat;
   background-position: 3px 50%;
@@ -254,6 +253,7 @@ a {
   font-size: 15px;
   font-weight: 300;
   line-height: 44px;
+  height: 50px;
 
   color: #000000;
 
@@ -1027,36 +1027,38 @@ a {
   flex-basis: 100%;
 }
 
-.form-modal-item input,
-.form-modal-item textarea {
-  border: none;
-  background: none;
-  outline: none;
- }
-
 .form-modal label {
   display: block;
-
   font-family: 'Gilroy', 'Arial', sans-serif;
   font-size: 17.5px;
   font-weight: 800;
   line-height: 1.4;
-
   margin-bottom: 13px;
-
   color: #000000;
 }
 
 .form-modal input,
 .form-modal textarea {
+  border: 2px solid transparent;
+  background: none;
+  outline: none;
   background-color: rgb(242, 242, 242);
-
   font-family: 'Open Sans', 'Arial', sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.25;
-
   color: rgba(70, 70, 70, 0.4);
+}
+
+.form-modal input:hover,
+.form-modal textarea:hover {
+  background-color: rgba(219, 219, 219, 0.8);
+}
+
+.form-modal input:focus,
+.form-modal textarea:focus {
+  border: 2px solid #f0c52e;
+  background-color: #fff;
 }
 
 .form-modal input {
@@ -1093,6 +1095,14 @@ a {
 
   opacity: 0.5;
   z-index: 3;
+}
+
+.modal-close:hover {
+  opacity: 1;
+}
+
+.modal-close:active {
+  opacity: 0.3;
 }
 
 .form-modal-submit {
@@ -1561,14 +1571,70 @@ h1 {
   opacity: 1;
 }
 
+.filter .price {
+  padding: 0 0 10px 0;
+}
+
+.price legend {
+  padding: 11px 0 39px 0;
+}
+
 .price-value {
-  margin-top: -4px;
-  padding: 0 0 57px 0;
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 2px;
+
+  margin: -4px 0 57px 0;
+
+  background-color: #dbdbdb;
+}
+
+.price-value:before,
+.price-value:after {
+  content: url(../img/filter-button.svg);
+  position: absolute;
+  top: -10px;
+  left: -6px;
+  z-index: 2;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+.price-value:after {
+  left: 53%;
 }
 
 .price input {
-  display: block;
+  display: none;
   width: 100%;
+}
+
+.price-value span {
+  font-family: 'Gilroy', 'Arial', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 45px;
+  letter-spacing: normal;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.price-min:after {
+  content: '';
+  display: block;
+  width: 53%;
+  background-color: #91c92f;
+  height: 2px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.price-max {
+  margin-left: 30%;
 }
 
 .filter-btn {
@@ -1583,7 +1649,7 @@ h1 {
   list-style-type: none;
   padding: 61px 0 0 0;
   margin: 0;
-  width: 100%;
+  min-width: 760px;
   background-color: #fff;
   justify-content: space-between;
 }
