--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
   src:
     local('Gilroy-ExtraBold'),
     local('Gilroy - Extra Bold'),
-    url("../fonts/web/gilroyextrabold.woff2") format('woff2'),
-    url("../fonts/web/gilroyextrabold.woff") format('woff');
+    url("../fonts/gilroyextrabold.woff2") format('woff2'),
+    url("../fonts/gilroyextrabold.woff") format('woff');
   font-weight: 800;
   font-style: normal;
 }
@@ -15,8 +15,8 @@
   src:
     local('Gilroy-Light'),
     local('Gilroy - Light'),
-    url("../fonts/web/gilroylight.woff2") format('woff2'),
-    url("../fonts/web/gilroylight.woff") format('woff');
+    url("../fonts/gilroylight.woff2") format('woff2'),
+    url("../fonts/gilroylight.woff") format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -26,8 +26,8 @@
   src:
     local('OpenSans-light'),
     local('Open Sans - light'),
-    url("../fonts/web/opensanslight.woff2") format('woff2'),
-    url("../fonts/web/opensanslight.woff") format('woff');
+    url("../fonts/opensanslight.woff2") format('woff2'),
+    url("../fonts/opensanslight.woff") format('woff');
   font-weight: 300;
   font-style: normal;
 }
@@ -37,8 +37,8 @@
   src:
     local('OpenSans'),
     local('Open Sans'),
-    url("../fonts/web/opensans.woff2") format('woff2'),
-    url("../fonts/web/opensans.woff") format('woff');
+    url("../fonts/opensans.woff2") format('woff2'),
+    url("../fonts/opensans.woff") format('woff');
   font-weight: normal;
   font-style: normal;
 }
